sched-deps: respect deps->readonly in macro-fusion (PR 84566)

PR rtl-optimization/84566
	* sched-deps.c (sched_analyze_insn): Check deps->readonly when invoking
	sched_macro_fuse_insns.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@259322 138bc75d-0d04-0410-961f-82ee72b054a4